--- a/.textlintrc
+++ b/.textlintrc
@@ -7,6 +7,7 @@
     "no-exclamation-question-mark": true,
     "ja-no-redundant-expression": true,
     "preset-ja-technical-writing": true,
-    "ja-technical-writing/ja-no-mixed-period": false
+    "ja-technical-writing/ja-no-mixed-period": false,
+    "ja-spacing/ja-space-between-half-and-full-width": false
   }
 }
